Fix tutorials bar extra margin

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,6 @@
 {
   font-size: 14px;
   border-collapse:collapse;
-  margin:20px 0 0;
   padding:0;
 }
 
